src/test/deca/syntax/invalid/className-class.synt
className-class.deca:1:
